# palooza

./: pyproject.toml
db/: env.py  seeds.py
palooza/: __init__.py
palooza/api/: __init__.py  index.py  login.py  nodes.py  paloozas.py
palooza/frontend/: .env  index.html  package-lock.json  package.json
palooza/frontend/src/: App.vue  networkClient.ts
palooza/frontend/src/assets/: main.css
palooza/frontend/src/components/: PaloozaBoard.vue  PaloozaCard.vue  PaloozaColumn.vue
palooza/frontend/src/router/: index.ts
palooza/frontend/src/views/: LoginView.vue  PaloozaView.vue
palooza/models/: __init__.py  config.py  node.py  palooza.py
