[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "palooza"
description = "Rebootapalooza manager"
authors = [{ name = "Tjaart van der Walt", email = "tjaart@ucsb.edu" }]
dynamic = ["version"]
dependencies = ["flask", "flask-cors", "flask-jwt-extended", "Flask-SQLAlchemy", "Flask-DB", "ldap3", "sqlalchemy-serializer"]

[project.scripts]
palooza = "palooza:main"
palooza_seed = "palooza:seed"
